--- a/config.yml
+++ b/config.yml
@@ -25,16 +25,7 @@ google_analytics: "G-EXE1PJ8CR2"
 
 webstack:
   search:
-    enabled: true
-    default: google
-    # 可选的搜索引擎
-    engines:
-      - google
-      - github
-      - weibo
-      - baidu
-      - bilibili
-      - zhihu
+    enabled: false
 
 content:
   categories:
